store manager nav bar showing again + dark mode improvments + nav bar fix clicking on the button not working if the click wasn't inside the text

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body.dark-mode textarea::placeholder {
 /* Navbar/Header */
 body.dark-mode .navbar,
 body.dark-mode .header {
-  background-color: #1e1e1e; /* Dark header background */
+  background-color: #000000; /* Dark header background */
   color: #eaeaea;
   border-bottom: 1px solid #333333; /* Dark border under navbar */
 }
@@ -83,10 +83,8 @@ body.dark-mode ::-webkit-scrollbar-thumb {
 }
 
 /* Ensure all divs and header sections inherit dark mode */
-body.dark-mode header,
-body.dark-mode .header,
 body.dark-mode div {
-  background-color: #121212 !important; /* Force dark background */
+  background-color: #121212 ; /* Force dark background */
   color: #eaeaea !important; /* Force light text */
   border: none !important; /* Remove unnecessary borders */
 }
@@ -195,4 +193,37 @@ body.dark-mode h3 {
 
 body.dark-mode .MuiTypography-root.MuiTypography-body2.css-1a1whku-MuiTypography-root{
   color: #c4c3c3!important;
+}
+body.dark-mode .MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionSticky.css-12d2x54-MuiPaper-root-MuiAppBar-root{
+  background-color: #000000 !important;
+  color:#000000 !important;
+}
+.MuiToolbar-root {
+  background-color: #000000 !important;
+}
+.MuiBox-root.css-1umjnsf {
+  background-color: #000000 !important;
+}
+.css-1588512-MuiButtonBase-root-MuiButton-root {
+  border: #000000 !important;
+}
+
+body.dark-mode .alert.alert-danger{
+  background-color:#58151c4a;
+}
+
+body.dark-mode .quantity-btn{
+  background-color: #626262 !important;
+  color:#000000 !important;
+}
+body.dark-mode .css-1588512-MuiButtonBase-root-MuiButton-root{
+  background-color: #626262 !important;
+  color:#000000 !important;
+}
+.btn.btn-dark.border.border-secondary  {
+  margin: auto;
+  text-align: center;
+}
+body.dark-mode .mb-0{
+  background-color: #1e1e1e
 }
